tests/marouter/errors/incomplete_connections/both_missing1of2/errors.marouter
Error: District '1' has no source.
Error: District '1' has no sink.
Error: No valid vehicles loaded.
Quitting (on error).
